--- a/src/main/webapp/WEB-INF/views/tiles.xml
+++ b/src/main/webapp/WEB-INF/views/tiles.xml
@@ -12,62 +12,62 @@
 	</definition>
 
     <definition name="admin/administrator" extends="baseTemplate">
-        <put-attribute name="title" value="${label.home}" />
+        <put-attribute name="titleKey" value="label.administrator" />
         <put-attribute name="body" value="/WEB-INF/views/admin/administrator.jsp" />
     </definition>
 
 	<definition name="anonymous/login" extends="baseTemplate">
-		<put-attribute name="title" value="Login" />
+		<put-attribute name="titleKey" value="label.login" />
 		<put-attribute name="body" value="/WEB-INF/views/anonymous/login.jsp" />
 	</definition>
 
     <definition name="anonymous/register" extends="baseTemplate">
-        <put-attribute name="title" value="Register" />
+        <put-attribute name="titleKey" value="label.registration" />
         <put-attribute name="body" value="/WEB-INF/views/anonymous/register.jsp" />
     </definition>
 
     <definition name="error/general-error" extends="baseTemplate">
-        <put-attribute name="title" value="Error" />
+        <put-attribute name="titleKey" value="label.error" />
         <put-attribute name="body" value="/WEB-INF/views/error/general-error.jsp" />
     </definition>
 
     <definition name="general/main" extends="baseTemplate">
-        <put-attribute name="title" value="Main" />
-        <put-attribute name="body" value="/WEB-INF/views/general/main.jsp" />
+        <put-attribute name="titleKey" value="title.main"/>
+        <put-attribute name="body" value="/WEB-INF/views/general/main.jsp"/>
     </definition>
 
     <definition name="user/profile" extends="baseTemplate">
-        <put-attribute name="title" value="Profile" />
+        <put-attribute name="titleKey" value="label.profile" />
         <put-attribute name="body" value="/WEB-INF/views/user/profile.jsp" />
     </definition>
 
     <definition name="general/task" extends="baseTemplate">
-        <put-attribute name="title" value="Task" />
+        <put-attribute name="titleKey" value="label.task" />
         <put-attribute name="body" value="/WEB-INF/views/general/task.jsp" />
     </definition>
 
     <definition name="user/create_task" extends="baseTemplate">
-        <put-attribute name="title" value="Create Task" />
+        <put-attribute name="titleKey" value="title.create_task" />
         <put-attribute name="body" value="/WEB-INF/views/user/create_task.jsp" />
     </definition>
 
     <definition name="user/create_subproblem" extends="baseTemplate">
-        <put-attribute name="title" value="Create Subproblem" />
+        <put-attribute name="titleKey" value="title.create_subproblem" />
         <put-attribute name="body" value="/WEB-INF/views/user/create_subproblem.jsp" />
     </definition>
 
-    <definition name="user/tasks" extends="baseTemplate">
-        <put-attribute name="title" value="My Tasks" />
-        <put-attribute name="body" value="/WEB-INF/views/user/tasks.jsp" />
+    <definition name="user/my_tasks" extends="baseTemplate">
+        <put-attribute name="titleKey" value="label.tasks" />
+        <put-attribute name="body" value="/WEB-INF/views/user/my_tasks.jsp" />
     </definition>
 
     <definition name="user/edit_task" extends="baseTemplate">
-        <put-attribute name="title" value="Edit Task" />
+        <put-attribute name="titleKey" value="label.edit" />
         <put-attribute name="body" value="/WEB-INF/views/user/edit_task.jsp" />
     </definition>
 
     <definition name="general/search" extends="baseTemplate">
-        <put-attribute name="title" value="Search" />
+        <put-attribute name="titleKey" value="label.search" />
         <put-attribute name="body" value="/WEB-INF/views/general/search.jsp" />
     </definition>
 
